<resources>
    <string name="app_name">HealthMe</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string name="choose_activity">Choose Activity</string>
    <string name="choose_date">Choose Date</string>
    <string name="temp_date">12-12-2015</string>
    <string name="select_date">Select Date</string>
    <string name="save_activity">Save Activity</string>
    <string name="read_data">Read Data</string>



    <string-array name="navigation_drawer_items_array">
        <item></item>
        <item>Add Activity</item>
        <item>Fixtures</item>
        <item>Table</item>
        <item>Maps</item>
    </string-array>


    <string-array name="day_array">
        <item>Monday</item>
        <item>Tuesday</item>
        <item>Wednesday</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
        <item>Sunday</item>
    </string-array>


    <string-array name="activity_array">
        <item>Running</item>
        <item>Walking</item>
        <item>Biking</item>
        <item>Weight Training</item>
        <item>Group Workout</item>
    </string-array>


</resources>
